# workflow-execution-engine

./: .env.example.sh  .gitignore  README.md  cli.py  config.json  main.py  pyproject.toml  run_api.py  run_combined.py
data/: workflows.db
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/common/: Pagination.tsx  ProtectedRoute.tsx  StatusBadge.tsx
frontend/src/components/dashboard/: ActivityFeed.tsx  StatusCard.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/logs/: LogViewer.tsx
frontend/src/components/runs/: CleanupRunsModal.tsx  RunFilters.tsx  RunList.tsx
frontend/src/components/workflows/: WorkflowCard.tsx  WorkflowList.tsx
frontend/src/hooks/: useAuth.tsx  useTimezone.tsx  useToast.tsx  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  RunDetail.tsx  Runs.tsx  UserManagement.tsx  WorkflowDetail.tsx  Workflows.tsx
frontend/src/services/: api.ts  auth.ts
plans/: workflow-engine-completion-plan.md
src/: __init__.py  database.py  engine.py  executor.py  logger.py  models.py  scheduler.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py  websocket.py
src/api/auth/: __init__.py  dependencies.py  models.py  routes.py  schemas.py
src/api/routes/: __init__.py  logs.py  runs.py  stats.py  workflows.py
src/db/: __init__.py  database.py
