[project]
name = "workflow-execution-engine"
version = "0.1.0"
description = "A cron-based workflow execution engine for scheduling and running commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter==2.0.0",
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
    "pydantic==2.12.5",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6"
]

[project.scripts]
workflow-engine = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]